Changed NodeJs and Battery Format

--- a/starship/starship-left.toml
+++ b/starship/starship-left.toml
@@ -52,8 +52,20 @@ $jobs\
 $battery\
 $character"""
 
+[battery]
+format= "[$symbol $percentage]($style)"
+
+[[battery.display]]  # "bold red" style when capacity is between 0% and 10%
+threshold = 10
+style = "bold red"
+
+[[battery.display]]  # "bold yellow" style when capacity is between 10% and 30%
+threshold = 30
+style = "bold yellow"
+
+
 [nodejs]
-format = "via [$symbol$version ](bold green)"
+format = "via $symbol[$version ](bold green)"
 
 [custom.docker]
 symbol = "🐳 "
