--- a/starship/starship-right.toml
+++ b/starship/starship-right.toml
@@ -8,6 +8,8 @@ add_newline = false
 [cmd_duration]
 min_time = 500
 format = "[took](bold) [$duration](bold yellow) [at](bold) "
+show_notifications = true
+min_time_to_notify = 9_000
 
 
 [status]
@@ -18,5 +20,5 @@ disabled = false
 
 [time]
 disabled = false
-format = '🕙 [$time ]($style) '
+format = '🕙 [$time]($style)'
 time_format = "%r"
